--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "robofreinds",
   "version": "0.1.0",
+  "homepage": "http://shreekarhegde.github.io/robofreinds",
   "private": true,
   "dependencies": {
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "0.9.5",
@@ -13,6 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
