--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "robofreinds",
   "version": "0.1.0",
-  "homepage": "https://shreekarhegde.github.io/robofreinds",
+  "homepage": "https://shreekarhegde.github.io/robofriends/",
   "private": true,
   "dependencies": {
     "gh-pages": "^3.1.0",
